# ReVoman

./: .classpath  .gitignore  .project  AGENTS.md  BUILD.bazel  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  DEVELOPMENT.md  README.adoc  README.md  STYLE.md  antora-playbook.yml  build.gradle.kts  gradle.properties  gradlew  libs.versions.toml  package.json  qodana.yaml  renovate.json  scheduling-parity-audience-deck.html  scheduling-parity-deck.html  settings.gradle.kts
.asciidoctor/: docinfo.html
.cursor/: rules.mdc  style.mdc
.firecrawl/: postman-pm-api-reference.md
.github/: renovate.json
.github/workflows/: build.yml  deploy-website.yml  docs.yml  qodana.yml  qodana_code_quality.yml
.postman/: resources.yaml
buildSrc/: build.gradle.kts  settings.gradle.kts
detekt/: baseline.xml  config.yml
docs/: antora.yml  rundown-serialization.md
docs/modules/ROOT/: nav.adoc
docs/release-notes/: revoman-2.0.adoc
docs/superpowers/: 2026-06-30-wfs-parity-test-report.md
docs/superpowers/benchmarks/: baseline.md
docs/superpowers/plans/: 2026-05-18-postman-v3-support.md  2026-05-26-v3-file-utils.md  2026-05-27-revomanutils-slim.md  2026-06-04-pm-sandbox-phase1.md  2026-06-11-pm-sandbox-api-coverage.md  2026-06-13-antora-content-port.md  2026-06-13-antora-scaffold.md  (+22 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
js/: package-lock.json  package.json
jvmTest/: build.gradle.kts
scripts/: release.sh  watch-maven-central.sh
website/: README.md  astro.config.mjs  build.gradle.kts  package-lock.json  package.json
(+1283 files in other folders)
