load("@rules_java//java:defs.bzl", "java_import")

package(default_visibility = ["//visibility:public"])

java_import(
    name = "com_salesforce_revoman_revoman",
    jars = glob(
        ["build/libs/revoman-root-*.jar"],
        allow_empty = False,
    ),
    srcjar = glob(
        ["build/libs/revoman-root-*-sources.jar"],
        allow_empty = False,
    )[0],
)
